# the-witness

./: README.md  docker-compose.yml  issues for v1  prometheus.yml
backend/: .replit  Dockerfile  alembic.ini  gunicorn_conf.py  main.py  pyproject.toml  replit.md  requirements.txt  start-reload.sh  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_create_user_table.py  002_create_graph_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: graph.py  health.py  login.py  websockets.py
backend/app/core/: VALIDATION  circuit_breaker.py  config.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  edge.py  meme.py
backend/app/schemas/: meme.py  user.py
backend/app/services/: embedding_service.py  graph_service.py  meme_processor.py  websocket_service.py
backend/attached_assets/: BACKEND_GUIDE_1764717211334.md
backend/server/api/: routes.py  websockets.py
backend/server/models/: database.py  schemas.py
backend/server/services/: crawler_service.py  embedding_service.py  graph_service.py  llm_service.py  meme_processor.py  system_monitor.py
frontend/: .gitignore  BACKEND_SPEC.md  package.json  vite.config.ts
frontend/attached_assets/: Pasted-1-Setup-and-Configuration-Inputs-One-Time-or-Initial-Th_1764715777037.txt
frontend/client/: index.html
frontend/client/src/: App.tsx  index.css
frontend/client/src/components/: loom-viz.tsx  meme-stream.tsx  seed-injector.tsx  system-logs.tsx  witness-layout.tsx
(+7 files in other folders)
