[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.123.5",
    "networkx>=3.6",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
    "sentence-transformers>=2.2.2",
    "scrapy>=2.11.0",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "fakeredis>=2.20.0",
]
